# cod_py_09

./: Makefile  README.md  pyproject.toml
requirements/: dev.txt
src/: schema.py
