[tool.poetry]
name = "cod-py-09"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

dependencies = [
    "aiofiles",
    "aiosqlite",
    "alembic",
    "anyio",
    "httpx",
    "httpx-sse",
    "loguru",
    "pydantic",
    "sqlalchemy[asyncio,mypy]",
    "stamina",
    "third-party-imports",
    "typer[all]",
]
[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pyproject-fmt",
    "ruff",
    "types-aiofiles",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
